--- a/index.html
+++ b/index.html
@@ -9,7 +9,10 @@
 <body>
     <form>
         <input type="text" name="htmlName" id="htmlName" oninput="handleInput(event)">
-        <input type="number" name="numberOfrows" id="numberOfrows">
+        <div class="clearfix"></div>
+        <!-- <input type="number" name="numberOfrows" id="numberOfrows"> -->
+         <input type="text" name="var1" id="var1" oninput="handleInput(event)">
+         <div class="clearfix"></div>
         <input type="file" name="csvFile" id="csvFile" accept=".csv">
         <pre id="output"></pre>
         <div id="container" style="width: 300px; height: 300px;"></div>
