--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="./index.css">
 </head>
 <body>
-    <form>
+    <form id="appForm">
         <input type="text" name="htmlName" id="htmlName" oninput="handleInput(event)">
         <div class="clearfix"></div>
         <!-- <input type="number" name="numberOfrows" id="numberOfrows"> -->
@@ -17,7 +17,7 @@
         <div id="container" style="width: 300px; height: 300px;">
         </div>
         <div id="testBtn">testBtn</div>
-        <button onsubmit="submitForm()">submit</button>
+        <button type="submit">Submit</button>
     </form>
     <script defer src="./index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/monaco-editor@latest/min/vs/loader.js"></script>
