input dynamic mapping

--- a/index.html
+++ b/index.html
@@ -14,6 +14,11 @@
          <div id="inputFields" class="textClone"></div>
         <input type="file" name="csvFile" id="csvFile" accept=".csv">
         <pre id="output"></pre>
+        <ul id="languageSelector">
+            <li data-language = 'html' class="active">HTML</li>
+            <li data-language = 'javascript'>JS</li>
+            <li data-language = 'css'>CSS</li>
+        </ul>
         <div id="container" style="width: 300px; height: 300px;">
         </div>
         <div id="testBtn">testBtn</div>
