--- a/index.html
+++ b/index.html
@@ -21,7 +21,9 @@
         </ul>
         <div id="container" style="width: 300px; height: 300px;">
         </div>
-        <div id="testBtn">testBtn</div>
+        <label for="outputDir">Save to:</label>
+        <button type="button" id="selectFolder">Select Folder</button>
+        <span id="selectedFolder"></span>
         <button type="submit">Submit</button>
     </form>
     <script defer src="./index.js"></script>
